--- a/package.json
+++ b/package.json
@@ -2,16 +2,32 @@
   "name": "Chat",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "eslint --ignore-path .gitignore --debug src/**/*.js --fix",
+    "lint": "eslint --ignore-path .gitignore --debug src/**/*.js",
+    "prettier": "prettier --write src/**/*.js"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "prettier --write src/**/*.js"
+    }
   },
   "keywords": [],
   "author": "ORKEMEY",
   "license": "ISC",
   "dependencies": {
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.7.2",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.17.0",
     "express": "^4.17.1",
+    "husky": "^3.1.0",
     "mongodb": "^3.4.0",
+    "prettier": "^1.19.1",
     "socket.io": "^2.3.0"
   }
 }
