--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "husky": "^3.1.0",
     "mongodb": "^3.4.0",
     "prettier": "^1.19.1",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "travis": "^0.1.1"
   }
 }
