--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
   "author": "ORKEMEY",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
+    "mongodb": "^3.4.0",
+    "socket.io": "^2.3.0"
+  },
+  "devDependencies" : {
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-config-airbnb": "^18.0.1",
@@ -24,11 +29,10 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.17.0",
-    "express": "^4.17.1",
-    "husky": "^3.1.0",
-    "mongodb": "^3.4.0",
+    "travis": "^0.1.1",
     "prettier": "^1.19.1",
-    "socket.io": "^2.3.0",
-    "travis": "^0.1.1"
+    "husky": "^3.1.0"
   }
+
+
 }
