--- a/package.json
+++ b/package.json
@@ -6,12 +6,8 @@
   "scripts": {
     "test": "eslint --ignore-path .gitignore --debug src/**/*.js --fix",
     "lint": "eslint --ignore-path .gitignore --debug src/**/*.js",
-    "prettier": "prettier --write src/**/*.js"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "prettier --write src/**/*.js"
-    }
+    "prettier": "prettier --write src/**/*.js",
+    "start": "node src/server.js"
   },
   "keywords": [],
   "author": "ORKEMEY",
@@ -31,7 +27,6 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.17.0",
     "travis": "^0.1.1",
-    "prettier": "^1.19.1",
-    "husky": "^3.1.0"
+    "prettier": "^1.19.1"
   }
 }
