--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongodb": "^3.4.1",
+    "mongoose": "^5.8.3",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
     "heroku": "^7.35.1",
     "eslint": "^6.7.2",
+    "nodemon": "^2.0.2",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
